--- a/src/app/components/Requests/creates-request/creates-request.component.html
+++ b/src/app/components/Requests/creates-request/creates-request.component.html
@@ -2,13 +2,13 @@
   <div class="d-flex justify-content-center">
     <div class="col-lg-9">
       <h3 class="py-4">Engage<span class="text-danger">X</span></h3>
-      <div class="card shadow-sm animated flipInX delay-02">
+      <div class="card well shadow-sm animated flipInX delay-02">
         <div class="card-header">
          <div class="d-flex justify-content-between">
           <div class="card-header-title display-5">
         <div class="card-header-title bold display-5"><i *ngIf="hasRequest" [routerLink]="['/user-request-details']"
           style="background-color: rgb(243, 243, 243); cursor: pointer; border-radius: 8px; padding: 2px;"
-            class="bi bi-arrow-left-short"></i><span class="p-3">Customer Request</span></div>
+            class="bi bi-arrow-left-short"></i><span class="p-3 pt-0">Customer Request</span></div>
           </div>
          </div>
         </div>
