--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -1,19 +1,21 @@
+<header class="site-header">
+    <div class="logo-header">
+      <img class="zi-2" src="../../../../assets/logo.png" alt="Image Description" style="width: 13rem;">
+    </div>
+</header>
 <main id="content" role="main" class="main">
   <div class="position-fixed top-0 end-0 start-0 bg-img-start" style="height: 100%; ">
   </div>
 
   <!-- Content -->
   <div class="container py-5 py-sm-7">
-    <a class="d-flex justify-content-center mb-5">
-      <img class="zi-2" src="../../../../assets/eand.png" alt="Image Description" style="width: 13rem;">
-    </a>
     <div class="mx-auto" style="max-width: 35rem;">
       <!-- Card -->
-      <div class="card shadow card-lg mb-5">
+      <div class="card shadow well card-lg mb-5">
         <div class="card-body">
 
           <div class="text-center">
-            <div class="mb-5">
+            <div class="mb-4">
               <h1 class="display-5">Account Creation</h1>
               <p>Already have an account? <a class="link" [routerLink]="'/auth/sign-in'">Sign in here</a></p>
             </div>
