--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark site-header">
   <div class="container">
-    <a class="navbar-brand"><img width="15%" height="15%" src="../../../../assets/images/logo.png" alt=""></a>
+    <a class="navbar-brand"><img width="15%" height="15%" src="../../../../assets/logo.png" alt=""></a>
 
     <button (click)="uiState.isNavbarCollapsed = !uiState.isNavbarCollapsed" class="navbar-toggler" type="button" data-toggle="collapse"
       data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
