--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -78,6 +78,17 @@
   border-top: 1px solid rgba(231,234,243,.7);
 }
 
+.site-header{
+  background-color: #4b0f1e !important;
+  box-shadow: 0px 2px 3px grey !important;
+}
+.site-header .navbar-brand img{
+  margin-top: 0px !important;
+  margin-left: 1% !important;
+  margin-bottom: 0px !important;
+  // height: 7% !important;
+  // width: 20% !important;
+}
 /* ---------------------------- MID-SMALL SCREENS --------------------------- */
 
 @media (max-width: 858px) {
