--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,60 @@
 .v-message{
   color: red;
 }
+// Mahinder CSS
+
+.well{
+  min-height: 20px;
+  padding-left: 19px;
+  padding-top: 19px;
+  padding-right: 19px;
+  padding-bottom: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5 !important;
+  border: 1px solid #e3e3e3 !important;
+  border-radius: 4px !important;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05) !important;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.05) !important;
+}
+.btn:hover,
+.btn{
+  color: #fff !important;
+  background-color: #4b0f1e !important;
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  padding: 10px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  border-radius: 4px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border-color: unset !important;
+}
+.form-control{
+  background-image: none;
+  border: 1px solid #e5e6e7 !important;
+  border-radius: 4px !important;
+  padding: 20px 12px !important;
+  width: 100% !important;
+  height: 35px;
+  font-family: sans-serif, dinregular,"open sans", "Helvetica Neue", Helvetica, Arial;
+  color: #4b0f1e !important;
+  font-size: 13px !important;
+}
+.form-label{
+  color: #4b0f1e !important;
+}
+.btn-check:focus+.btn-primary, .btn-primary:focus{
+  background-color: #4b0f1e !important;
+  border-color: #4b0f1e !important;
+  box-shadow:unset !important;
+}
