[update] bug fix

--- a/src/app/components/Requests/admin-list/admin-list.component.html
+++ b/src/app/components/Requests/admin-list/admin-list.component.html
@@ -1,6 +1,6 @@
 <div class="tabel-header py-3">
   <div class="mb-2 mb-md-0">
-    <h4>Admin Approval</h4>
+    <h4>Enterprise Admin Approval</h4>
   </div>
   <div class="d-grid d-sm-flex gap-2">
   </div>
