--- a/src/app/components/Requests/admin-request-details/admin-request-details.component.html
+++ b/src/app/components/Requests/admin-request-details/admin-request-details.component.html
@@ -1,10 +1,10 @@
 <div class="content container-fluid">
   <div class="d-flex justify-content-center">
     <div class="col-lg-11">
-      <h3 class="py-4">Engage<span class="text-danger">X</span></h3>
-      <div class="card shadow-sm animated flipInX delay-02">
+      <h3 class="py-4">LB-ECM Engage<span class="text-danger">X</span></h3>
+      <div class="card shadow animated flipInX delay-02">
         <div class="card-header">
-          <div [routerLink]="['/admin-requests-list']" class="card-header-title bold display-5"><i style="background-color: rgb(243, 243, 243); cursor: pointer; border-radius: 8px; padding: 2px;" class="bi bi-arrow-left-short"></i> Admin Approval</div>
+          <div [routerLink]="['/admin-requests-list']" class="card-header-title bold display-5"><i style="background-color: rgb(243, 243, 243); cursor: pointer; border-radius: 8px; padding: 2px;" class="bi bi-arrow-left-short"></i>Enterprise Admin Approval</div>
         </div>
         <div class="card-body">
           <div class="row">
@@ -12,7 +12,7 @@
               <ul class="list-unstyled list-py-2 text-dark mb-0">
                 <li class="pb-0"><span class="card-subtitle display-5">Status</span></li>
                 <li>
-                  <div class="fw-bold">Admin Approval:</div>
+                  <div class="fw-bold">Enterprise Admin Approval:</div>
                   <div class="status" [ngClass]="{
                     'pending': userRequestDetails.approval.adminApprovalStatus === 0,
                     'approved': userRequestDetails.approval.adminApprovalStatus === 1,
@@ -26,7 +26,7 @@
                   </div>
                 </li>
                 <li>
-                  <div class="fw-bold">Security Approval:</div>
+                  <div class="fw-bold">e& Security Approval:</div>
                   <div class="status" [ngClass]="{
                     'pending': userRequestDetails.approval.superAdminApprovalStatus === 0,
                     'approved': userRequestDetails.approval.superAdminApprovalStatus === 1,
