--- a/src/app/components/Requests/creates-request/creates-request.component.html
+++ b/src/app/components/Requests/creates-request/creates-request.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-center">
     <div class="col-lg-9">
       <h3 class="py-4">Engage<span class="text-danger">X</span></h3>
-      <div class="card shadow-sm animated flipInX delay-02">
+      <div class="card shadow animated flipInX delay-02">
         <div class="card-header">
          <div class="d-flex justify-content-between">
           <div class="card-header-title display-5">
