--- a/src/app/components/Requests/super-admin-list/super-admin-list.component.html
+++ b/src/app/components/Requests/super-admin-list/super-admin-list.component.html
@@ -1,7 +1,7 @@
 <div class="tabel-header py-3">
   <div class="mb-2 mb-md-0">
     <div class="display-5">
-      Security Approval
+      e& Security Approval
     </div>
   </div>
   <div class="d-grid d-sm-flex gap-2">
