--- a/src/app/components/auth/sign-in/sign-in.component.html
+++ b/src/app/components/auth/sign-in/sign-in.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="mb-5">
               <h1 class="display-5">Sign in</h1>
-              <p>Don't have an account yet? <a class="link" [routerLink]="'/auth/sign-up'">Sign up here</a></p>
+              <p>Don't have an account yet? <a class="link" style="color: #4b0f1e;" [routerLink]="'/auth/sign-up'">Sign up here</a></p>
             </div>
             <span class="divider-center text-muted mb-4">OR</span>
           </div>
