--- a/src/app/components/launch-campaign/launch-campaign.component.html
+++ b/src/app/components/launch-campaign/launch-campaign.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-center">
     <div class="col-lg-9">
       <h3 class="py-4">LB-ECM Engage<span class="text-danger">X</span></h3>
-      <div class="card shadow-sm animated flipInX delay-02">
+      <div class="card shadow animated flipInX delay-02">
         <div class="card-header">
           <div class="d-flex justify-content-between">
             <div class="card-header-title display-5">
@@ -57,7 +57,7 @@
                   </select>
                 </div>
               </div>
-              <div class="col-sm-6">
+              <!-- <div class="col-sm-6">
                 <label>Select Location</label>
                 <div class="mb-4 d-flex">
                   <select class="form-control" formControlName="emirate" [style.marginRight.px]="5" style="width: 20%;">
@@ -67,7 +67,7 @@
                     <option *ngFor="let area of bigData" [value]="area.area">{{ area.area }}</option>
                   </select>
                 </div>
-              </div>
+              </div> -->
 
               <div class="d-flex justify-content-end gap-3">
                 <button type="submit" [disabled]="uiState.isLoading" class="btn btn-primary">
