--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -15,7 +15,7 @@
           <div class="text-center">
             <div class="mb-5">
               <h1 class="display-5">Account Creation</h1>
-              <p>Already have an account? <a class="link" [routerLink]="'/auth/sign-in'">Sign in here</a></p>
+              <p>Already have an account? <a style="color: #4b0f1e;" class="link" [routerLink]="'/auth/sign-in'">Sign in here</a></p>
             </div>
 
             <span class="divider-center text-muted mb-4">OR</span>
