--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -7,12 +7,23 @@
       aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div [ngClass]="(uiState.isOnMidScreen && uiState.isNavbarCollapsed) ? 'nav-collapsed':'nav-uncollapsed'" class="collapse navbar-collapse">
+    <div class="row">
+      <div class="col">
+        <div ngbDropdown class="d-inline-block">
+          <span type="button" class="btn btn-outline-secondary" id="dropdownBasic1" ngbDropdownToggle>
+            {{fullName}}
+          </span>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <a class="dropdown-item"><i class="bi bi-gear"></i><span class="menu-item">Settings</span> </a>
+            <a class="dropdown-item" (click)="logout()"><i class="bi bi-box-arrow-left"></i><span
+                class="menu-item">Logout</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div [ngClass]="(uiState.isOnMidScreen && uiState.isNavbarCollapsed) ? 'nav-collapsed':'nav-uncollapsed'" class="collapse navbar-collapse">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- <li class="nav-item">
-          <a class="nav-link active"
-          [class.active]="uiState.activeItem == 'home'" (click)="onSelected('home')">Home</a>
-        </li> -->
       </ul>
       <span (click)="logout()">Tettt</span>
       <div class="d-flex image">
@@ -20,7 +31,6 @@
           <img class="avatar-img" src="../../../../assets/images/Portrait_Placeholder.png" alt="">
           <span class="avatar-status avatar-sm-status avatar-status-success"></span>
         </div>
-          <!-- Start Mega-Menu -->
           <div class="mega-menu">
             <div class="dropdown-item-text">
               <div class="d-flex align-items-center">
@@ -38,7 +48,7 @@
               <a class="dropdown-item" (click)="logout()"><i class="bi bi-box-arrow-left"></i><span class="menu-item">Logout</span></a>
           </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </nav>
 
