--- a/src/assets/theme/custome-style.scss
+++ b/src/assets/theme/custome-style.scss
@@ -14,7 +14,7 @@
   display: flex !important;
   min-width: 0 !important;
   word-wrap: break-word !important;
-  background-color: #fff !important;
+  background-color: #f8f8f8 !important;
   background-clip: border-box !important;
   border: .0625rem solid rgba(231, 234, 243, .7) !important;
   border-radius: .75rem !important;
@@ -74,21 +74,21 @@
 
 .btn-primary {
   color: #fff !important;
-  background-color: #377dff !important;
-  border-color: #377dff !important;
+  background-color: #4b0f1e !important;
+  border-color: #4b0f1e !important;
 }
 
 .btn-primary:hover {
   color: #fff !important;
-  background-color: #2f6ad9 !important;
-  border-color: #2c64cc !important;
+  background-color: #4b0f1e !important;
+  border-color: #4b0f1e !important;
 }
 
 .btn-check:focus+.btn-primary,
 .btn-primary:focus {
   color: #fff !important;
-  background-color: #2f6ad9 !important;
-  border-color: #2c64cc !important;
+  background-color: #4b0f1e !important;
+  border-color: #4b0f1e !important;
   box-shadow: 0 0 0 0 rgba(85, 145, 255, .5) !important;
 }
 
@@ -103,7 +103,7 @@
 }
 
 .bg-dark {
-  background-color: #132144 !important;
+  background-color: #4b0f1e !important;
 }
 
 .btn-ghost-light {
