--- a/src/app/components/big-data/big-data.component.html
+++ b/src/app/components/big-data/big-data.component.html
@@ -25,7 +25,7 @@
       </td>
     </tr>
     <tr *ngFor="let item of bigData">
-      <td>{{ maskPhoneNumber(item.phoneNumber) }}</td>
+      <td>{{ item.phoneNumber }}</td>
       <td>{{item.area}}</td>
       <td>{{item.emirate}}</td>
     </tr>
