--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -78,6 +78,12 @@
   border-top: 1px solid rgba(231,234,243,.7);
 }
 
+.btn-outline-secondary{
+  color: #f8f9fa !important;
+}
+.btn:hover{
+  background-color:rgba(255, 255, 255, 0.15);
+}
 /* ---------------------------- MID-SMALL SCREENS --------------------------- */
 
 @media (max-width: 858px) {
