--- a/src/app/components/launch-campaign/launch-campaign.component.html
+++ b/src/app/components/launch-campaign/launch-campaign.component.html
@@ -17,9 +17,9 @@
           <div *ngIf="uiState.isSuccess" class="alert alert-success" role="alert">
             {{uiState.successMessage}}
           </div>
-            <div *ngIf="uiState.errorAlert" class="alert alert-success" role="alert">
-              {{uiState.errorMessage}}
-            </div>
+          <div *ngIf="uiState.errorAlert" class="alert alert-success" role="alert">
+            {{uiState.errorMessage}}
+          </div>
           <div class="row">
             <div class="col-6">
               <ul class="list-unstyled list-py-2 text-dark mb-0 mb-4">
@@ -39,7 +39,6 @@
             </div>
           </div>
 
-
           <form [formGroup]="launchCampaignFormGroup" (ngSubmit)="launchCampaign()">
             <div class="row">
               <div class="col-sm-12">
@@ -48,26 +47,15 @@
                   <textarea type="text" class="form-control" formControlName="campaignContent" readonly></textarea>
                 </div>
               </div>
-              <div class="col-sm-6">
-                <label>Select Phoane Number</label>
+              <div class="col-sm-6" *ngIf="!uiState.isBulkSMS">
+                <label>Recipients</label>
                 <div class="mb-4">
-                  <select type="text" class="form-control" formControlName="phoneNumber">
+                  <select type="text" class="form-control" formControlName="phoneNumber" readonly>
                     <option *ngFor="let item of bigData" [value]="item.phoneNumber">{{ item.phoneNumber
                       }}</option>
                   </select>
                 </div>
               </div>
-              <!-- <div class="col-sm-6">
-                <label>Select Location</label>
-                <div class="mb-4 d-flex">
-                  <select class="form-control" formControlName="emirate" [style.marginRight.px]="5" style="width: 20%;">
-                    <option *ngFor="let emirate of bigData" [value]="emirate.emirate">{{ emirate.emirate }}</option>
-                  </select>
-                  <select class="form-control" formControlName="area" style="width: 80%;">
-                    <option *ngFor="let area of bigData" [value]="area.area">{{ area.area }}</option>
-                  </select>
-                </div>
-              </div> -->
 
               <div class="d-flex justify-content-end gap-3">
                 <button type="submit" [disabled]="uiState.isLoading" class="btn btn-primary">
