--- a/src/app/components/Requests/superadmin-request-details/superadmin-request-details.component.html
+++ b/src/app/components/Requests/superadmin-request-details/superadmin-request-details.component.html
@@ -86,6 +86,10 @@
                   <div class="fw-bold">Campaign Content:</div>
                   <div class="value"><i class="bi bi-body-text"></i> : {{ userRequestDetails.campaignContent }}</div>
                 </li>
+                  <li>
+                    <div class="fw-bold">Sender Id:</div>
+                    <div class="value"><i class="bi bi-send"></i> : {{ userRequestDetails.senderId }}</div>
+                  </li>
               </ul>
             </div>
           </div>
