--- a/src/app/components/launch-campaign/launch-campaign.component.html
+++ b/src/app/components/launch-campaign/launch-campaign.component.html
@@ -56,6 +56,14 @@
                   </select>
                 </div>
               </div>
+                  <div class="col-6">
+                    <ul class="list-unstyled list-py-2 text-dark mb-0 mb-4">
+                      <li>
+                        <div class="property">Sender Id:</div>
+                        <div class="value"><i class="bi bi-send"></i> : {{ userRequestDetails.senderId }}</div>
+                      </li>
+                    </ul>
+                  </div>
 
               <div class="d-flex justify-content-end gap-3">
                 <button type="submit" [disabled]="uiState.isLoading" class="btn btn-primary">
